# claude_orchestrator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README_dist_template.md  build_exe.ps1  claude_orchestrator_gui.spec  memo.txt  pyproject.toml  requirements.txt
apps/: gui_main.py
bac/docs/: workflow_rules.md
bac/file_copipe_gui/20260317-163611/: pyproject.toml
bac/file_copipe_gui/20260317-163627/: requirements.txt
docs/: 20260321_Claude Orchestrator 改善整理メモ.md  20260321_carry_over-v0 実施可否確定と運用ガイドライン配置先の決定.md  20260321_carry_over-v0 実装記録.md  20260321_carry_over_v1_design.md  20260321_carry_over_v1_implementation_record.md  20260321_改修タスク分解案（Orchestrator改善）.md  20260323_phase1_task_execution_lock_spec.md  20260323_phase2_role_cycle_fix_spec.md  20260323_phase3_revision_guard_spec.md  Claude Orchestrator GUI 開発記録 & 次工程指示書.md  GUI再設計_次工程指示書.md  GUI後工程自動化_実装記録_2026-03-20.md  Remote Claude 後工程対応 実装分割案.md  Remote Claude 後工程対応 設計書.md  claude_orchestrator_GUIMVP仕様案.md  design_principles_gui_ready.md  handover_claude_orchestrator_mvp.md  orchestrator_improvement_report.md  pipeline タブ 実装開始用ファイル設計書  plan_director_仕様書.md  planner_v1_仕様書.md  planner_v2_仕様書.md  remote_control_operator_flow_design.md  remote_control_operator_session_prompt.md  remote_orchestrator_integration_plan.md  remote_orchestrator_v1_handover.md  workflow_rules.md  将来フロー_標準ラインと改善ライン統合仕様.md  現状フロー_将来フロー整理メモ.md
docs/remote_claude/: implementation_log_2026-03-19.md
src/claude_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/core/: test_prompt_renderer.py
(+357 files in other folders)
